--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,11 @@
     {{ site.title }}
 </title>
 
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="public/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="public/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="public/favicon/favicon-16x16.png">
+
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
