faq and abour progress

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -4,8 +4,7 @@
     <head>
         {% include head.html %}
 
-        <link rel="stylesheet" href="public/css/legal.css">
-
+        <link rel="stylesheet" href="public/css/app.css">
     </head>
 
     <body>
