better faq design and ease of updating

--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -3,9 +3,7 @@
 
     <head>
         {% include head.html %}
-
-        <link rel="stylesheet" href="{{ site.baseurl }}/public/css/legal.css">
-
+        <link rel="stylesheet" href="{{ site.baseurl }}/public/css/faq.css">
     </head>
 
     <body>
