--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -3,8 +3,7 @@
 
     <head>
         {% include head.html %}
-
-        <link rel="stylesheet" href="public/css/app.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/public/css/app.css">
     </head>
 
     <body>
